--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>画像ルーレット</title>
+	<title>ルーレット</title>
 	<style>
 	body {
 	      text-align: center;
@@ -171,3 +171,4 @@
 </body>
 
 </html>
+
