--- a/index.html
+++ b/index.html
@@ -2,178 +2,228 @@
 <html lang="ja">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>画像ルーレット</title>
-	<style>
-	body {
-	      text-align: center;
-	      font-family: sans-serif;
-	    }
-	img {
-	  width: 300px;
-	  height: auto;
-	  border: 2px solid #333;
-	}
-	button {
-	  width: 40vw;
-	  max-width: 180px;
-	  font-size: 18px;
-	  padding: 14px 0;
-	}
-	#title {
-	width: auto;        /* 国名の表示幅を固定 */
-	font-size: 18px;
-	  text-align: left;   /* 左揃えにすると安定 */
-	  white-space: nowrap;/* 折り返し防止 */
-	  overflow: hidden;   /* はみ出し防止 */
-	  text-overflow: ellipsis; /* 長い場合は… */
-		}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>画像ルーレット</title>
 
-	#titleArea {
-	  margin-top: 15px;
-	  height: 40px;              /* ← 高さ固定 */
-	  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  gap: 40px;                 /* 画像と文字の間隔 */
-	  font-size: 20px;
-	  font-weight: bold;
+  <style>
+    body {
+      text-align: center;
+      font-family: sans-serif;
+    }
 
-		/* 追加 */
-		width: 90vw;
-		max-width: 450px;
-		margin-left: auto;
-		margin-right: auto;
-	}
-		
-		#titleImage {
-	  width: 48px;         /* 国旗は固定 */
-	  height: 32px;
-	  flex-shrink: 0;      /* 縮まない */
-	  object-fit: contain;
-		}
-	    #imageArea {
-		  width: 90vw;        /* 画面幅の90% */
-		  max-width: 450px;  /* PCでは今まで通り */
-		  height: 55vw;      /* 縦横比を維持 */
-		  max-height: 400px;
-		  margin: 0 auto;
-		  border: 2px solid #333;
-		  display: flex;
-		  align-items: center;
-		  justify-content: center;
-		}
-			
-		#imageArea img {
-		  width: 100%;
-		  height: 100%;
-		  object-fit: contain;
-		  border: none;
-		}
-	</style>
+    button {
+      width: 40vw;
+      max-width: 180px;
+      font-size: 18px;
+      padding: 14px 0;
+      margin: 10px;
+    }
+
+    #titleArea {
+      margin-top: 15px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 40px;
+      font-size: 20px;
+      font-weight: bold;
+
+      width: 90vw;
+      max-width: 450px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    #titleImage {
+      width: 48px;
+      height: 32px;
+      flex-shrink: 0;
+      object-fit: contain;
+    }
+
+    #title {
+      font-size: 18px;
+      white-space: nowrap;
+    }
+
+    #imageArea {
+      width: 90vw;
+      max-width: 450px;
+      height: 55vw;
+      max-height: 400px;
+      margin: 0 auto;
+      border: 2px solid #333;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #imageArea img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  </style>
 </head>
 
 <body>
-	<h1>Sora'S kitchen ルーレット</h1>
-	<div id="titleArea">
-		<img id="titleImage" src="flags/au.svg" alt="">
-		<span id="title">オーストラリア</span>
-	</div>
-	<div id="imageArea">
-		<img id="rouletteImage" src="images/1.jpg" alt="">
-	</div>
-	<div>
-		<button onclick="startRoulette()">スタート</button>
-		<button onclick="stopRoulette()">ストップ</button>
-	</div>
-	<script>
-	const titleImageElement = document.getElementById("titleImage");
-	
-		const images = [
-		  { src: "images/1.jpg", flag: "flags/au.svg", title: "オーストラリア" },
-		  { src: "images/2.jpg", flag: "flags/ru.svg", title: "ロシア" },
-		  { src: "images/3.jpg", flag: "flags/us.svg", title: "アメリカ" },
-		  { src: "images/4.jpg", flag: "flags/ca.svg", title: "カナダ" },
-		  { src: "images/5.jpg", flag: "flags/us.svg", title: "ハワイ" },
-		  { src: "images/6.jpg", flag: "flags/br.svg", title: "ブラジル" },
-		  { src: "images/7.jpg", flag: "flags/jp.svg", title: "日本" },
-		  { src: "images/8.jpg", flag: "flags/in.svg", title: "インド" },
-		  { src: "images/9.jpg", flag: "flags/it.svg", title: "イタリア" },
-		  { src: "images/10.jpg", flag: "flags/cn.svg", title: "中国" },
-		  { src: "images/11.jpg", flag: "flags/es.svg", title: "スペイン" },
-		  { src: "images/12.jpg", flag: "flags/kr.svg", title: "韓国" },
-		  { src: "images/13.jpg", flag: "flags/fr.svg", title: "フランス" }
-		];
-	
-	    const imgElement = document.getElementById("rouletteImage");
-	    const titleElement = document.getElementById("title");
-	
-	const tickSound = new Audio("sounds/drumroll.mp3");
-	tickSound.loop = true;
-	tickSound.volume = 0.5;
 
-	const stopSound = new Audio("sounds/stop.mp3");
-	stopSound.volume = 0.7;
+<h1>Sora'S kitchen ルーレット</h1>
 
-	let audioUnlocked = false;
-	
-    let timer = null;
-    let speed = 100;
-    let currentIndex = 0;
-    let stopping = false;
-	
-	function startRoulette() {
-	  if (timer) return;
-	
-	  if (!audioUnlocked) {
-	    tickSound.play().then(() => {
-	      audioUnlocked = true;
-	    }).catch(() => {});
-	  } else {
-	    tickSound.currentTime = 0;
-	    tickSound.play();
-	  }
-	
-	  titleElement.textContent = "";
-	  speed = 100;
-	  stopping = false;
-	
-	  timer = setInterval(changeImage, speed);
-	}
-	
-	    function stopRoulette() {
-	      stopping = true;
-	    }
-	
-	function changeImage() {
-	  currentIndex = Math.floor(Math.random() * images.length);
-	
-	  imgElement.src = images[currentIndex].src;
-	  titleElement.textContent = images[currentIndex].title;
-	  titleImageElement.src = images[currentIndex].flag;
-	
-	
-	  if (stopping) {
-	    speed += 50;
-	    clearInterval(timer);
-	    timer = setInterval(changeImage, speed);
-	
-	    if (speed > 600) {
-	      clearInterval(timer);
-	      timer = null;
-	
-	      // ★ tickSound を確実に止める
-	      tickSound.pause();
-	      tickSound.currentTime = 0;
-	
-	      // 停止音
-	      stopSound.currentTime = 0;
-	      stopSound.play();
-	    }
-	  }
-	}
-	</script>
+<div id="titleArea">
+  <img id="titleImage" src="flags/au.svg" alt="">
+  <span id="title">オーストラリア</span>
+</div>
+
+<div id="imageArea">
+  <img id="rouletteImage" src="images/1.jpg" alt="">
+</div>
+
+<div>
+  <button onclick="startRoulette()">スタート</button>
+  <button onclick="stopRoulette()">ストップ</button>
+</div>
+
+<script>
+/* =========================
+   データ
+========================= */
+const images = [
+  { src: "images/1.jpg", flag: "flags/au.svg", title: "オーストラリア" },
+  { src: "images/2.jpg", flag: "flags/ru.svg", title: "ロシア" },
+  { src: "images/3.jpg", flag: "flags/us.svg", title: "アメリカ" },
+  { src: "images/4.jpg", flag: "flags/ca.svg", title: "カナダ" },
+  { src: "images/5.jpg", flag: "flags/us.svg", title: "ハワイ" },
+  { src: "images/6.jpg", flag: "flags/br.svg", title: "ブラジル" },
+  { src: "images/7.jpg", flag: "flags/jp.svg", title: "日本" },
+  { src: "images/8.jpg", flag: "flags/in.svg", title: "インド" },
+  { src: "images/9.jpg", flag: "flags/it.svg", title: "イタリア" },
+  { src: "images/10.jpg", flag: "flags/cn.svg", title: "中国" },
+  { src: "images/11.jpg", flag: "flags/es.svg", title: "スペイン" },
+  { src: "images/12.jpg", flag: "flags/kr.svg", title: "韓国" },
+  { src: "images/13.jpg", flag: "flags/fr.svg", title: "フランス" }
+];
+
+const imgElement = document.getElementById("rouletteImage");
+const titleElement = document.getElementById("title");
+const titleImageElement = document.getElementById("titleImage");
+
+/* =========================
+   音声
+========================= */
+const tickSound = new Audio("sounds/drumroll.mp3");
+tickSound.loop = true;
+tickSound.volume = 0.5;
+
+const stopSound = new Audio("sounds/stop.mp3");
+stopSound.volume = 0.7;
+
+let audioUnlocked = false;
+
+/* =========================
+   ルーレット制御
+========================= */
+let timer = null;
+let speed = 80;          // 初速（少し速め）
+let stopping = false;
+
+function startRoulette() {
+  if (timer) return;
+
+  if (!audioUnlocked) {
+    tickSound.play().then(() => {
+      tickSound.pause();
+      tickSound.currentTime = 0;
+      audioUnlocked = true;
+    }).catch(() => {});
+  }
+
+  speed = 80;
+  stopping = false;
+
+  tickSound.currentTime = 0;
+  tickSound.playbackRate = 1.2;
+  tickSound.play();
+
+  timer = setInterval(changeImage, speed);
+}
+
+function stopRoulette() {
+  stopping = true;
+}
+
+function changeImage() {
+  const index = Math.floor(Math.random() * images.length);
+
+  imgElement.src = images[index].src;
+  titleElement.textContent = images[index].title;
+  titleImageElement.src = images[index].flag;
+
+  if (stopping) {
+    speed += 40;
+
+    // ★ 今鳴っている音をそのまま減速
+    tickSound.playbackRate = Math.max(0.4, tickSound.playbackRate - 0.05);
+
+    clearInterval(timer);
+    timer = setInterval(changeImage, speed);
+
+    if (speed > 550) {
+      clearInterval(timer);
+      timer = null;
+
+      tickSound.pause();
+      tickSound.currentTime = 0;
+      tickSound.playbackRate = 1.0;
+
+      setTimeout(() => {
+        stopSound.currentTime = 0;
+        stopSound.play();
+      }, 200);
+    }
+  }
+}
+
+
+function stopRoulette() {
+  stopping = true;
+}
+
+function changeImage() {
+  const index = Math.floor(Math.random() * images.length);
+  imgElement.src = images[index].src;
+  titleElement.textContent = images[index].title;
+  titleImageElement.src = images[index].flag;
+
+  if (stopping) {
+    speed += 40; // 徐々に遅く
+
+    // ★ 音も自然に減速
+    tickSound.playbackRate = Math.max(0.5, tickSound.playbackRate - 0.06);
+
+    clearInterval(timer);
+    timer = setInterval(changeImage, speed);
+
+    // ★ 完全停止直前の「タメ」
+    if (speed > 550) {
+      clearInterval(timer);
+      timer = null;
+
+      tickSound.pause();
+      tickSound.currentTime = 0;
+      tickSound.playbackRate = 1.0;
+
+      // タメ（0.25秒）
+      setTimeout(() => {
+        stopSound.currentTime = 0;
+        stopSound.play();
+      }, 250);
+    }
+  }
+}
+</script>
+
 </body>
-
 </html>
