--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>画像ルーレット</title>
+  <title>ルーレット</title>
 
   <style>
     body {
@@ -227,3 +227,4 @@ function changeImage() {
 
 </body>
 </html>
+
