--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ルーレット</title>
+  <title>画像ルーレット</title>
 
   <style>
     body {
@@ -115,7 +115,8 @@ const titleImageElement = document.getElementById("titleImage");
 ========================= */
 const tickSound = new Audio("sounds/drumroll.mp3");
 tickSound.loop = true;
-tickSound.volume = 0.5;
+tickSound.volume = 0.6;
+tickSound.playbackRate = 1.0;
 
 const stopSound = new Audio("sounds/stop.mp3");
 stopSound.volume = 0.7;
@@ -144,11 +145,13 @@ function startRoulette() {
   stopping = false;
 
   tickSound.currentTime = 0;
-  tickSound.playbackRate = 1.2;
+  tickSound.volume = 0.6;
+  tickSound.playbackRate = 1.0;
   tickSound.play();
 
   timer = setInterval(changeImage, speed);
 }
+
 
 function stopRoulette() {
   stopping = true;
@@ -193,38 +196,41 @@ function stopRoulette() {
 
 function changeImage() {
   const index = Math.floor(Math.random() * images.length);
+
   imgElement.src = images[index].src;
   titleElement.textContent = images[index].title;
   titleImageElement.src = images[index].flag;
 
   if (stopping) {
-    speed += 40; // 徐々に遅く
+    speed += 40;
 
-    // ★ 音も自然に減速
-    tickSound.playbackRate = Math.max(0.5, tickSound.playbackRate - 0.06);
+    // ★ 再生速度は控えめに
+    tickSound.playbackRate = Math.max(0.85, tickSound.playbackRate - 0.02);
+
+    // ★ 音量で「減速感」を出す（iPhone安定）
+    tickSound.volume = Math.max(0.15, tickSound.volume - 0.03);
 
     clearInterval(timer);
     timer = setInterval(changeImage, speed);
 
-    // ★ 完全停止直前の「タメ」
     if (speed > 550) {
       clearInterval(timer);
       timer = null;
 
       tickSound.pause();
       tickSound.currentTime = 0;
+      tickSound.volume = 0.6;
       tickSound.playbackRate = 1.0;
 
-      // タメ（0.25秒）
       setTimeout(() => {
         stopSound.currentTime = 0;
         stopSound.play();
-      }, 250);
+      }, 200);
     }
   }
 }
+
 </script>
 
 </body>
 </html>
-
