--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>画像ルーレット</title>
+  <title>そら'sキッチンルーレット</title>
 
   <style>
     body {
@@ -70,7 +70,7 @@
 
 <body>
 
-<h1>Sora'S kitchen ルーレット</h1>
+<h1>そら'sキッチンルーレット</h1>
 
 <div id="titleArea">
   <img id="titleImage" src="flags/au.svg" alt="">
